--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "npm-watch": "^0.5.0",
+    "openzeppelin-solidity": "2.2.0",
     "solium": "^1.1.5",
-    "truffle-hdwallet-provider": "0.0.6",
+    "truffle": "^5.0.32",
+    "truffle-hdwallet-provider": "^1.0.16",
     "zeppelin-solidity": "1.12.0"
   },
   "watch": {
